GNOME Bugzilla – Bug 664927
GST_STATIC_CAPS missing initializer
Last modified: 2011-11-27 22:38:00 UTC
Created attachment 202251 [details] [review] patch GST_STATIC_CAPS is missing initializer for GstMiniObject's n_weak_refs and weak_refs resulting in compilation warning (llvm-gcc -Wall)
Pushed, thanks: commit 62dce62e00d69a08da6cd8424d778d2b5c55dde6 Author: Matej Knopp <matej.knopp@gmail.com> Date: Sun Nov 27 20:32:14 2011 +0100 caps: fix compilation warning GST_STATIC_CAPS is missing initializer for GstMiniObject's n_weak_refs and weak_refs resulting in compilation warning (llvm-gcc -Wall) https://bugzilla.gnome.org/show_bug.cgi?id=664927